# openapi2spec

./: .gitignore  README.md  checks.sh  pyproject.toml
.github/workflows/: ci.yml
openapi2skill/: __init__.py  __main__.py  generator.py  loader.py  models.py  parser.py  resolver.py  writer.py
specs/projects/api-skill-generator/: architecture.md  functional_spec.md  implementation_plan.md  project_overview.md
specs/projects/api-skill-generator/phase_plans/: phase_1.md  phase_2.md  phase_3.md
specs/projects/schema-enriched-reference-docs/: architecture.md  functional_spec.md  implementation_plan.md  project_overview.md
specs/projects/schema-enriched-reference-docs/phase_plans/: phase_1.md  phase_3.md
specs/projects/skill-md-progressive-disclosure/: architecture.md  functional_spec.md  implementation_plan.md  project_overview.md
tests/: __init__.py  test_generator.py  test_integration.py  test_loader.py  test_main.py  test_parser.py  test_resolver.py  test_writer.py
tests/fixtures/: sample_spec.json
