[project]
name = "openapi2skill"
version = "0.3.0"
description = "Generate agent skills from OpenAPI specs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
openapi2skill = "openapi2skill.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "ty>=0.0.24",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["openapi2skill"]
